<resources>
    <string name="app_name">Ejemplo</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="button_send">ENVIAR</string>
    <string name="button_help">VER AYUDA</string>
    <string name="button_acceder">ACCEDER</string>
    <string name="passwd_edit">Contraseña</string>
    <string name="usuario_edit">Usuario</string>
    <string name="title_activity_exercise">ExerciseActivity</string>

    <string name="subir_fichero">SUBIR FICHERO</string>
    <string name="sacar_foto">SACAR FOTO</string>
    <string name="grabar_audio">GRABAR AUDIO</string>
    <string name="grabar_video">GRABAR VIDEO</string>

    <string name="nuevo_test">NUEVO TEST</string>
    <string name="nuevo_ejercicio">NUEVO EJERCICIO</string>
    <string name="seguimiento">SEGUIMIENTO</string>

    <string name="login_incorrecto">Login incorrecto! Vuela a intentarlo</string>
    <string name="login_correcto">Login correcto!</string>
    <string name="test_opcion_erronea">¡Has fallado!</string>
    <string name="test_opcion_correcta">Correcto</string>
    <string name="no_camera">No dispones de camara en el dispositivo</string>
    <string name="no_app">No dispones de la aplicación necesaria</string>
    <string name="no_micro">No dispones de micrófono en el dispositivo</string>
    <string name="fichero_subido">El fichero se ha subido correctamente</string>
    <string name="resultado_enviado">El resultado se ha subido correctamente</string>
    <string name="campos">Hay que rellenar todos los campos!!!!</string>
</resources>
