<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eus.ehu.ane.tta.ejemplo.presentacion.ExerciseActivity">

    <TextView
        android:id="@+id/exercise_wording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_send_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subir_fichero"
        android:onClick="subirFichero"/>

    <Button
        android:id="@+id/button_sacar_foto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sacar_foto"
        android:onClick="sacarFoto"/>

    <Button
        android:id="@+id/button_grabar_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grabar_audio"
        android:onClick="grabarAudio"/>

    <Button
        android:id="@+id/button_grabar_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grabar_video"
        android:onClick="grabarVideo"/>
</LinearLayout>
